# cpp_rust_integration

./: CMakeLists.txt  main.cpp
cpp-project/: CMakeLists.txt  main.cpp
cpp-project-test/: CMakeLists.txt  test.cpp
libcpp-project/: CMakeLists.txt  cpp_project.cpp  cpp_project.h
rust-project/: Cargo.toml  build.rs
rust-project/bindings/: rust_c_bindings.h
rust-project/src/: lib.rs
